# rserver

./: .env  Cargo.toml  LICENSE  README.md  sample.db
.github/workflows/: rust_ci.yml
docker/: Dockerfile  image_buid.bat
docker/pg/: Dockerfile  image_buid.bat
migrations/2021-12-06-052853_sample/: up.sql
src/: lib.rs  main.rs  model.rs  schema.rs
src/web_dealer/: dealer_error.rs  http_def.rs  mod.rs
static/: 404.html  index.html  post_example.html  top.html
templates/: form.tera
