[package]
name = "rserver"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "rserver"
path = "src/main.rs"

[lib]
name = "rserver"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "1.4.4", features = ["postgres", "sqlite", "r2d2"] }
dotenv = "0.15.0"
diesel_migrations = "1.4.0"
tera = "1.12.1"
serde = { version = "1", features = ["derive"] }